--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "recharts": "^1.8.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "sqlite3": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
