--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "pg": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -28,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon server.js",
-    "dev": "node migration.js && node seed.js"
+    "dev": "node sqlite-migration.js && node sqlite-seed.js",
+    "postgres": "node postgreSQL-migration.js && node postgreSQL-seed.js"
   },
   "eslintConfig": {
     "extends": [
